# subsidy-brain

./: .env.example  .gitignore  README.md  pyproject.toml
agents/: adoption_researcher.py  base.py  bonus_evaluator.py  document_builder.py  expense_calc.py  fact_checker.py  financial_reader.py  guideline_fetcher.py  guideline_parser.py  orchestrator.py  profile_synthesizer.py  quality_check.py  story_builder.py  subsidy_discoverer.py  template_synthesizer.py
config/: logging.py  settings.py
demo/: mock_story.py  run_demo.py  run_full_demo.py  run_natural_demo.py  sample_company.yaml  sample_guideline.md  sample_profile.yaml  sample_registry.yaml  story_builder_live.py  verify_output.py
docs/: architecture.md  roadmap.md  vision.md
presets/: README.md  jizoku_19.yaml  jizoku_19_profile.yaml  monozukuri_v18.yaml  monozukuri_v18_profile.yaml  shoryokuka_v2.yaml  shoryokuka_v2_profile.yaml
schemas/: attachment.py  bonus_item.py  bonus_point.py  common.py  document_build.py  expense.py  fact_check.py  financial.py  guideline.py  integrations.py  orchestrator.py  persona.py  quality.py  section_limits.py  skill.py  story.py  subsidy_profile.py  subsidy_registry.py
templates/: build_official_style_template.py  build_sample_template.py
tests/: conftest.py  test_bonus_items.py  test_excel_and_refinement.py  test_full_pipeline.py  test_natural_pipeline.py  test_official_form_filler.py  test_operations.py  test_profile_pipeline.py  test_smoke.py
tools/: adoption_estimator.py  bonus_points.py  chart_tools.py  claude_client.py  cost_tracker.py  document_assembler.py  (+18 more)
(+5 files in other folders)
