[project]
name = "subsidy-brain"
version = "0.1.0"
description = "AI-native subsidy application agent — first step toward a Company Brain for SMBs"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Tetsuro Ikeda", email = "plan@ikedakeikaku.jp" },
]
dependencies = [
    "anthropic>=0.49.0",
    "pdfplumber>=0.11.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "structlog>=24.4.0",
    "matplotlib>=3.9.0",
    "PyYAML>=6.0",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[tool.setuptools.packages.find]
include = ["agents*", "schemas*", "tools*", "config*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# E501 (line too long) is relaxed: Japanese prompt strings frequently exceed
# 120 columns because each CJK character counts as one column.
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
